# langfuse-basics

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_run_index.py  0003_add_chunk_context.py  0003_rename_questions_json_to_md.py  0004_remove_langfuse_trace_id.py  0005_add_langfuse_trace_id.py
backend/app/: config.py  database.py  main.py
backend/app/eval/: __init__.py  aggregation.py  judge.py  prompts.py
backend/app/eval/events/: __init__.py  handlers.py
backend/app/judging/: __init__.py  aggregation.py  formatting.py  judge.py  prompts.py  schemas.py
backend/app/judging/events/: __init__.py  bus.py  handlers.py  types.py
backend/app/models/: __init__.py  experiment.py  questionnaire.py  source_material.py
backend/app/routers/: __init__.py  evaluation.py  experiments.py
backend/app/schemas/: base.py  dataset.py  evaluation.py  experiment.py  ingestion.py  retrieval.py  rubric.py
backend/app/services/: pipeline.py
backend/app/services/dataset/: versioning.py
backend/app/services/evaluation/: judge.py  prompts.py
backend/app/tracing/: langfuse_client.py
backend/data/questionnaires/: questionnaire-1.json
backend/scripts/: ingest.py  load_questionnaire.py  run_experiment.py
backend/tests/: conftest.py
backend/tests/eval/: test_aggregation.py  test_events.py  test_formatting.py
backend/tests/ingestion/: test_chunker.py
backend/tests/judging/: test_aggregation.py  test_events.py  test_formatting.py
(+25 files in other folders)
