[project]
name = "pensive-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "openai>=1.50.0",
    "pgvector>=0.3.0",
    "docling>=2.0.0",
    "tiktoken>=0.8.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.0.0",
    "langfuse>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
